--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "levanter@5.2.3",
+  "name": "Elijah",
   "description": "",
   "keywords": ["noedjs"],
   "success_url": "/",
@@ -32,7 +32,7 @@
     "STICKER_PACKNAME": {
       "description": "sticker pack info",
       "required": false,
-      "value": "❤️,LyFE"
+      "value": "🇰🇪, ELIJAH"
     },
     "HEROKU_APP_NAME": {
       "description": "Heroku app name, same as above entered.",
