--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "levanter",
+  "name": "Elija",
   "version": "3.2.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start . --attach --name levanter",
-    "docker": "pm2-runtime start . --name levanter",
-    "stop": "pm2 stop levanter",
+    "start": "pm2 start . --attach --name Elija",
+    "docker": "pm2-runtime start . --name Elija",
+    "stop": "pm2 stop Elija",
     "postinstall": "node -e \"try { require('sharp') } catch (e) { process.exit(1); }\" || yarn add --ignore-engines sharp@0.33.5"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.3",
-    "baileys": "git+https://lyfe00011-admin@bitbucket.org/lyfe00011/baileys.git",
+    "baileys": "git+https://Elija-admin@bitbucket.org/Elija/baileys.git",
     "browser-id3-writer": "^4.4.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.5.0",
